--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import './components/dropDown';
 @import './pages/about.scss'; 
 @import './pages/home.scss';
+@import './pages/quatre_page.scss';
 @import './pages/fiche_produit.scss';
 @import './layouts/footer';
 @import './layouts/nav.scss';
