--- a/src/sass/components/_dropDown.scss
+++ b/src/sass/components/_dropDown.scss
@@ -7,7 +7,6 @@
         color: white;
         border-radius: 5px;
         padding: 10px;
-        margin-bottom: 20px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -20,5 +19,17 @@
         display: flex;
         flex-direction: column;
         gap: 5px;
+    }
+}
+@media (min-height:768px) {
+    .content {
+        background-color: #f4f4f4;
+        p {
+            padding: 20px;
+            font-size: 15px!important;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
     }
 }
