mobile menu + footer + image fixe

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -6,6 +6,10 @@
   flex-direction: column;
   justify-content: center;
   align-content: center;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
   img {
     width: 122px;
     margin: 0px auto;
