--- a/src/sass/layouts/_nav.scss
+++ b/src/sass/layouts/_nav.scss
@@ -16,6 +16,7 @@
       color: black;
     text-decoration: none;
     font-size: 12px;
+    text-transform: uppercase;
     }
     a:hover {
       color: black;
@@ -40,6 +41,7 @@
       gap: 57px;
       a {
         font-size: 24px;
+        text-transform: unset;
       }
     }
   }
