--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -14,6 +14,7 @@
     margin: auto;
   }
 }
+
 .hero {
   display: flex;
   justify-self: center;
@@ -43,6 +44,7 @@
   }
 }
   .thumb {
+    background-size: cover;
     width: auto;
     height: 340px;
     position: relative;
